@@ -1,3 +1,9 @@
+Development Portal (2018-09-12 shi)
+==============================
+Remove list numbers from participating-org
+Update print-friendly css
+
+
 Development Portal (2018-08-24 shi)
 ==============================
 Fix alert colspan
